fixing spacing

--- a/assets/styles/blocks/_listing-pages.scss
+++ b/assets/styles/blocks/_listing-pages.scss
@@ -16,6 +16,7 @@
 
   &__heading {
     margin-bottom: $spacing__sm * 2;
+    font-size: 1em;
   }
 
   &__cta {
@@ -33,7 +34,7 @@
       text-align: left;
     }
     &__section {
-      padding: em($spacing__xxl) 0;
+      padding: em($spacing__lg) 0;
 
       &:nth-child(2n+1) {
         text-align: right;
